add chat screen

--- a/app/src/main/res/layout/receiver_message.xml
+++ b/app/src/main/res/layout/receiver_message.xml
@@ -19,6 +19,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
     <LinearLayout
+            android:layout_marginStart="8dp"
             android:orientation="vertical"
             android:layout_width="0dp" android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/avatar_image_view"
