add bottom sheet report

--- a/app/src/main/res/drawable/background_btn_mic_on.xml
+++ b/app/src/main/res/drawable/background_btn_mic_on.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle" android:padding="10dp">
             <!-- you can use any color you want I used here gray color-->
-            <solid android:color="@color/backround"/>
+            <solid android:color="@color/background"/>
             <corners android:radius="240dp"/>
         </shape>
     </item>
