--- a/app/src/main/res/layout/fragment_item_list_dialog_list_dialog.xml
+++ b/app/src/main/res/layout/fragment_item_list_dialog_list_dialog.xml
@@ -41,7 +41,7 @@
             android:clipToPadding="false"
             android:paddingBottom="@dimen/list_item_spacing_half"
             android:paddingTop="@dimen/list_item_spacing_half"
-            tools:context=".MediaListDialogFragment"
+            tools:context=".fragments.MediaListDialogFragment"
             tools:listitem="@layout/fragment_item_list_dialog_list_dialog_item"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout2"/>
 
