--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".SplashActivity">
+        tools:context=".activities.SplashActivity">
 <TextView android:layout_width="match_parent" android:layout_height="match_parent"
           android:text="HELLO😍"
           android:textSize="68sp"
