--- a/app/src/main/res/layout/bottom_sheet_report.xml
+++ b/app/src/main/res/layout/bottom_sheet_report.xml
@@ -112,7 +112,7 @@
         android:id="@+id/btn_vi_thanh_nien"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:text="✔   Vị thành niên ( < 13 tuổi)"
+        android:text="✔   Vị thành niên (nhỏ hơn 13 tuổi)"
         android:elevation="0dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
@@ -140,6 +140,7 @@
         android:background="@drawable/shape_rectangle_border_radius_btn_pink"/>
 
     <EditText
+        android:textColor="@color/text_secondary"
         android:textColorHint="@color/text_secondary"
         android:textSize="18sp"
         android:hint="Vui lòng mô tả ngắn gọn báo cáo của bạn"
