--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,6 +12,7 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="bottomSheetDialogTheme">@style/AppBottomSheetDialogTheme</item>
     </style>
     <style name="Theme.Fimae.NoActionBar">
         <item name="windowActionBar">false</item>
@@ -19,4 +20,14 @@
     </style>
     <style name="Theme.Fimae.AppBarOverlay" parent="ThemeOverlay.AppCompat.ActionBar"/>
     <style name="Theme.Fimae.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
+    <!-- bottom sheet -->
+    <style name="AppBottomSheetDialogTheme"
+        parent="Theme.Design.Light.BottomSheetDialog">
+        <item name="bottomSheetStyle">@style/AppModalStyle</item>
+    </style>
+
+    <style name="AppModalStyle"
+        parent="Widget.Design.BottomSheet.Modal">
+        <item name="android:background">@drawable/shape_bottom_sheet</item>
+    </style>
 </resources>
