change color button

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="secondary_4">#7CCFCD</color>
     <color name="tertiary_1">#FFE6F3</color>
     <color name="tertiary_2">#E3F2ED</color>
-    <color name="tertiary_3">#FAF7FE</color>
+    <color name="tertiary_3">#F3F0F8</color>
     <color name="background_button_1">#E3F2ED</color>
     <color name="background_button_2">#F9F9F9</color>
     <color name="text_primary">#2B2C2E</color>
