--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Fimae" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="Theme.Fimae" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/primary_1</item>
         <item name="colorPrimaryVariant">@color/primary_2</item>
@@ -12,6 +12,7 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <!-- New MaterialComponents attributes. -->
     </style>
     <style name="Theme.Fimae.NoActionBar">
         <item name="windowActionBar">false</item>
