--- a/app/src/main/res/drawable/bottom_model_item_background.xml
+++ b/app/src/main/res/drawable/bottom_model_item_background.xml
@@ -3,7 +3,7 @@
     android:color="@color/gray_400">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/backround_button_2" />
+            <solid android:color="#F9F9F9" />
             <corners android:radius="15dp" />
         </shape>
     </item>
