--- a/app/src/main/res/layout/fotos_item.xml
+++ b/app/src/main/res/layout/fotos_item.xml
@@ -4,12 +4,15 @@
     android:layout_height="wrap_content">
 
     <com.example.fimae.adapters.SquareImageView
+        android:id="@+id/post_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="1dp"
-        android:id="@+id/post_image"
-        android:scaleType="centerCrop"
-        android:background="@drawable/shape_gender_border_blue"
-        />
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="1dp"
+
+        android:background="@drawable/image_background"
+        android:scaleType="centerCrop" />
 
 </RelativeLayout>
